rename group -> class
