# docs/swagger.json
@@ -12,9 +12,9 @@
     "host": "194.135.25.202:8080",
     "basePath": "/",
     "paths": {
-        "/groups": {
+        "/classes": {
             "get": {
-                "description": "Retrieves a list of groups with pagination.",
+                "description": "Retrieves a list of classes with pagination.",
                 "consumes": [
                     "application/json"
                 ],
@@ -22,9 +22,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Groups"
+                    "Classes"
                 ],
-                "summary": "List groups with pagination",
+                "summary": "List classes with pagination",
                 "parameters": [
                     {
                         "type": "integer",
@@ -47,7 +47,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Group"
+                                "$ref": "#/definitions/models.Class"
                             }
                         }
                     },
@@ -72,7 +72,7 @@
                 }
             },
             "post": {
-                "description": "Creates a new group with the provided details.",
+                "description": "Creates a new class with the provided details.",
                 "consumes": [
                     "application/json"
                 ],
@@ -80,17 +80,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Groups"
+                    "Classes"
                 ],
-                "summary": "Create a new group",
+                "summary": "Create a new class",
                 "parameters": [
                     {
-                        "description": "Group details",
-                        "name": "group",
+                        "description": "Class details",
+                        "name": "class",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/services.GroupView"
+                            "$ref": "#/definitions/services.ClassView"
                         }
                     }
                 ],
@@ -98,7 +98,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.Group"
+                            "$ref": "#/definitions/models.Class"
                         }
                     },
                     "400": {
@@ -122,9 +122,9 @@
                 }
             }
         },
-        "/groups/{id}": {
+        "/classes/{id}": {
             "get": {
-                "description": "Retrieves a group by its ID.",
+                "description": "Retrieves a class by its ID.",
                 "consumes": [
                     "application/json"
                 ],
@@ -132,13 +132,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Groups"
+                    "Classes"
                 ],
-                "summary": "Get a group by ID",
+                "summary": "Get a class by ID",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Group ID",
+                        "description": "Class ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -148,7 +148,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/services.GroupView"
+                            "$ref": "#/definitions/services.ClassView"
                         }
                     },
                     "400": {
@@ -181,7 +181,7 @@
                 }
             },
             "put": {
-                "description": "Updates the details of an existing group.",
+                "description": "Updates the details of an existing class.",
                 "consumes": [
                     "application/json"
                 ],
@@ -189,24 +189,24 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Groups"
+                    "Classes"
                 ],
-                "summary": "Update an existing group",
+                "summary": "Update an existing class",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Group ID",
+                        "description": "Class ID",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Group details",
-                        "name": "group",
+                        "description": "Class details",
+                        "name": "class",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/services.GroupView"
+                            "$ref": "#/definitions/services.ClassView"
                         }
                     }
                 ],
@@ -214,11 +214,11 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Group"
+                            "$ref": "#/definitions/models.Class"
                         }
                     },
                     "400": {
-                        "description": "Invalid input or group is used in services",
+                        "description": "Invalid input or class is used in services",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -238,15 +238,15 @@
                 }
             },
             "delete": {
-                "description": "Deletes a group by its ID. If the group is used in any services, it returns an error.",
+                "description": "Deletes a class by its ID. If the class is used in any services, it returns an error.",
                 "tags": [
-                    "Groups"
+                    "Classes"
                 ],
-                "summary": "Delete a group",
+                "summary": "Delete a class",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Group ID",
+                        "description": "Class ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -254,10 +254,10 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "Group deleted successfully"
+                        "description": "Class deleted successfully"
                     },
                     "400": {
-                        "description": "Group is used in services",
+                        "description": "Class is used in services",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -676,7 +676,7 @@
         },
         "/services/{id}/approve": {
             "post": {
-                "description": "Approves a service by its ID. If a group ID is provided in the request body, it assigns the group to the service before approval.",
+                "description": "Approves a service by its ID. If a class ID is provided in the request body, it assigns the class to the service before approval.",
                 "consumes": [
                     "application/json"
                 ],
@@ -696,12 +696,12 @@
                         "required": true
                     },
                     {
-                        "description": "Group ID",
-                        "name": "group",
+                        "description": "Class ID",
+                        "name": "class",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.assignGroupRequest"
+                            "$ref": "#/definitions/handlers.assignClassRequest"
                         }
                     }
                 ],
@@ -722,7 +722,7 @@
                         }
                     },
                     "404": {
-                        "description": "Service or group not found",
+                        "description": "Service or class not found",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -742,16 +742,16 @@
                 }
             }
         },
-        "/services/{id}/proposed_groups": {
+        "/services/{id}/proposed_classes": {
             "get": {
-                "description": "Fetches a list of proposed groups for a service based on similar parameters.",
+                "description": "Fetches a list of proposed classes for a service based on similar parameters.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Services"
                 ],
-                "summary": "List proposed groups for a service",
+                "summary": "List proposed classes for a service",
                 "parameters": [
                     {
                         "type": "integer",
@@ -767,7 +767,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Group"
+                                "$ref": "#/definitions/models.Class"
                             }
                         }
                     },
@@ -821,15 +821,15 @@
                 }
             }
         },
-        "handlers.assignGroupRequest": {
+        "handlers.assignClassRequest": {
             "type": "object",
             "properties": {
-                "group_id": {
+                "class_id": {
                     "type": "integer"
                 }
             }
         },
-        "models.Group": {
+        "models.Class": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -869,14 +869,14 @@
                 "approved_at": {
                     "type": "string"
                 },
+                "class": {
+                    "$ref": "#/definitions/models.Class"
+                },
+                "class_id": {
+                    "type": "integer"
+                },
                 "created_at": {
                     "type": "string"
-                },
-                "group": {
-                    "$ref": "#/definitions/models.Group"
-                },
-                "group_id": {
-                    "type": "integer"
                 },
                 "id": {
                     "type": "integer"
@@ -892,7 +892,7 @@
                 }
             }
         },
-        "services.GroupView": {
+        "services.ClassView": {
             "type": "object",
             "properties": {
                 "allowed_parameters": {
@@ -921,12 +921,12 @@
                 "allowed_classes": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "type": "integer"
                     },
                     "example": [
-                        "1",
-                        "1033",
-                        "3023"
+                        1,
+                        1033,
+                        3023
                     ]
                 },
                 "id": {
