# internal/models/models.go
@@ -15,13 +15,13 @@ type Service struct {
 	ID         uint        `gorm:"primaryKey;autoIncrement" json:"id"`
 	Title      string      `json:"title"`
 	Parameters []Parameter `gorm:"many2many:service_parameters;" json:"parameters"`
-	GroupID    *uint       `gorm:"default:null" json:"group_id"`
-	Group      *Group      `gorm:"foreignKey:GroupID" json:"group"`
+	ClassID    *uint       `gorm:"default:null" json:"class_id"`
+	Class      *Class      `gorm:"foreignKey:ClassID" json:"class"`
 	CreatedAt  time.Time   `gorm:"autoCreateTime" json:"created_at"`
 	ApprovedAt *time.Time  `json:"approved_at"`
 }
 
-type Group struct {
+type Class struct {
 	ID        uint      `gorm:"primaryKey" json:"id"`
 	Title     string    `json:"title"`
 	CreatedAt time.Time `gorm:"autoCreateTime" json:"created_at"`
